--- a/redbgrand.client/src/index.css
+++ b/redbgrand.client/src/index.css
@@ -6,8 +6,8 @@ header {
     padding: 20px;
     background-color: #333;
     color: white;
-    font-family: "Compacta";
-    font-weight: lighter;
+    font-family: "Compacta Light";
+    font-weight: 100;
 }
 BODY {
     COLOR: black;
